Closed Bug 333665 Opened 19 years ago Closed 19 years ago

Using uninitialized variable rindex in nsXULTreeBuilder::CompareResults

Categories

(Core :: XUL, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: jwatt, Assigned: enndeakin)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(1 file)

Flags: blocking1.9a1?
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #237131 - Flags: superreview?
Attachment #237131 - Flags: review?
Attachment #237131 - Flags: superreview?(bugmail)
Attachment #237131 - Flags: superreview?
Attachment #237131 - Flags: review?(bugmail)
Attachment #237131 - Flags: review?
Attachment #237131 - Flags: superreview?(bugmail)
Attachment #237131 - Flags: superreview+
Attachment #237131 - Flags: review?(bugmail)
Attachment #237131 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Flags: blocking1.9a1?
Flags: in-testsuite-
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: