Bug 333665, initialize variable rindex, r+sr=sicking